# appabuild

./: .gitignore  .pre-commit-config.yaml  README.md  parameters.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_development.yml  continuous_integration.yml
app/cli/: __main__.py  database.py  lca.py  main.py
appabuild/: compute_impacts.py  logger.py  setup.py
appabuild/cli/: lca.py  main.py
appabuild/config/: appa_lca.py  lca.py
appabuild/database/: bw_databases.py  databases.py  serialized_data.py  user_database_elements.py
appabuild/model/: builder.py  graph.py  mermaid_graph.py
samples/conf/: appabuild_conf.yaml  appalca_conf.yaml  appalca_conf_with_ei.yaml  nvidia_ai_gpu_chip_lca_conf.yaml
samples/datasets/user_database/nvidia_ai_gpu/: ai_use_phase.yaml  electricity.yaml  (+2 more)
samples/exports/: sample_eime_v6_export.xlsx
tests/: test_build.py
tests/data/: nvidia_ai_gpu_chip_test.yaml
tests/data/background_database/: technosphere.bw2package
tests/data/cmd_build/: appalca_conf_wo_ei.yaml  expected_scores.yaml  nvidia_ai_gpu_chip_lca_conf_no_include_in_tree.yaml  nvidia_ai_gpu_chip_lca_conf_piecewise.yaml
tests/data/graphs_generation/: expected_graph.txt
tests/data/user_database/: user_database_no_proxy.bw2package
tests/end_to_end/: test_cmd_build.py  test_python_build.py
tests/end_to_end_tests/: test_build.py
tests/functional_no_db/: test_foreground_datasets.py  test_mermaid_graph_generation.py
tests/functional_no_db/data/: invalid_appalca_conf.yaml  valid_appalca_conf.yaml
tests/smoke/: test_help.py
(+3 files in other folders)
