[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["appabuild"]

[project]
name = "appabuild"
version = "0.3.7"
authors = [{ name = "Maxime Peralta", email = "maxime.peralta@cea.fr"}]
maintainers= [{name = "Maxime Peralta", email = "maxime.peralta@cea.fr"}]
description = "Appa Build is a package to build impact models"
keywords = ["ecodesign", "life cycle assessment"]
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11,<3.12"
dependencies = [
    "click<=8.1.8",
    "numpy==1.26.4",
    "pandas==2.3.3",
    "brightway25==1.1.0",
    "lca-algebraic-bw25==1.3.1",
    "fastapi",
    "uvicorn[standard]",
    "omegaconf",
    "pydantic",
    "scipy",
    "matplotlib",
    "seaborn",
    "plotly",
    "aenum",
    "kaleido",
    "tqdm",
    "ruamel.yaml",
    "apparun==0.3.7",
    "typer==0.15.1",
    "ipython>=7.6.0,<=8.34.0",
    "mermaid-py==0.7.1"
]

[project.scripts]
appabuild = "appabuild.cli.main:cli_app"

[project.urls]
"Source" = "https://github.com/appalca/appabuild/"